#29 Remove reliance on deprecated APIs